[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "peng-engeco"   # package name for PyPI
version = "0.1.0"
description = "Engineering Economics utilities (cash flows, factors) for P.Eng prep"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kirtan Adhikari" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/kirtan29/peng_engeco"
Issues   = "https://github.com/kirtan29/peng_engeco/issues"

[tool.hatch.build.targets.wheel]
# FIXED: point to the correct source folder
packages = ["src/peng_engeco"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
